--- a/client/i18n/en.json
+++ b/client/i18n/en.json
@@ -11,7 +11,7 @@
     "COMMANDBAR_PREV_WEEK_TEXT": "Go to previous week",
     "COMMANDBAR_NEXT_WEEK_TEXT": "Go to next week",
     "PERIOD_HOURS_SUMMARY_TEXT": "You have a total of **{0}** this period",
-    "HOURS_NOT_MATCHED_TEXT": "You have **{0}** that are not matched.",
+    "HOURS_NOT_MATCHED_TEXT": "You have **{0}** that are not matched. All events must be matched before you can confirm your hours.",
     "ALL_HOURS_MATCHED_TEXT": "All your hours are matched. Are you ready to confirm the period?",
     "PERIOD_CONFIRMED_TEXT": "The period is confirmed with {0}. Click **Unconfirm hours** if you want to do some adjustments.",
     "IGNORED_EVENTS_TEXT": "You have {0} ignored event(s).",
