--- a/client/i18n/en.json
+++ b/client/i18n/en.json
@@ -25,9 +25,12 @@
     "CATEGORY_OUTLOOK_TEXT": "This project has a category in your Outlook.",
     "PROJECT_WORKSPACE_LABEL": "Project workspace",
     "CREATE_OUTLOOK_CATEGORY_LABEL": "Create category in Outlook",
+    "OUTLOOK_CATEGORY_INFO_TEXT": "Here you can see the projects that have a corresponding category in Outlook.",
     "NO_TIME_ENTRIES_TEXT": "No time entries registered for the project.",
     "TIME_ENTRIES_ERROR_TEXT": "An error occured loading time entries for the project.",
-    "TIME_ENTRIES_LOADING_LABEL": "Loading time entries"
+    "TIME_ENTRIES_LOADING_LABEL": "Loading time entries",
+    "MY_PROJECTS_TEXT": "My projects",
+    "MY_PROJECTS_SEARCH_PLACEHOLDER": "Search my projects..."
   },
   "CUSTOMERS": {
     "CUSTOMER_INACTIVE_TEXT": "This customer has been marked as inactive.",
@@ -37,6 +40,8 @@
   "COMMON": {
     "SEARCH_PLACEHOLDER": "Search...",
     "GENERIC_ERROR_TEXT": "An error occured.",
-    "EXPORT_TO_EXCEL_LABEL": "Export to Excel"
+    "EXPORT_TO_EXCEL_LABEL": "Export to Excel",
+    "SEARCH_TEXT": "Search",
+    "CREATE_NEW_TEXT": "Create new"
   }
 }
