--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -14,10 +14,10 @@
     "goToCurrentWeek": "Go to current week",
     "goToPrevWeek": "Go to previous week",
     "goToNextWeek": "Go to next week",
-    "periodHoursSummaryText": "***{{hours}}*** this period",
-    "hoursNotMatchedText": "***{{hours}}*** unmatched this period. All events must be matched before you can confirm your timesheet.",
+    "periodHoursSummaryText": "**{{hours}}** this period",
+    "hoursNotMatchedText": "**{{hours}}** unmatched this period. All events must be matched before you can confirm your timesheet.",
     "allHoursMatchedText": "**All hours matched!** Are you ready to confirm the period?",
-    "periodConfirmedText": "***{{hours}}*** confirmed this period. Click **Unconfirm hours** if you want to do some adjustments.",
+    "periodConfirmedText": "**{{hours}}** confirmed this period. Click **Unconfirm hours** if you want to do some adjustments.",
     "ignoredEventsText": "You have {{ignored_count}} ignored event(s).",
     "undoIgnoreText": "Click to undo",
     "unresolvedErrorText": "You have {{count}} unresolved errors. You need to resolve them before confirming the hours",
