CheckboxField as separate component

--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -272,7 +272,10 @@
     "exportTypeCurrentYear": "This year ({{year}})",
     "subscription": "Subscription",
     "nameLabel": "Name",
-    "descriptionLabel": "Description"
+    "descriptionLabel": "Description",
+    "officeLocationLabel": "Office Location",
+    "departmentLabel": "Department",
+    "mobilePhoneLabel": "Mobile phone"
   },
   "navigation": {
     "timesheet": "Timesheet",
