--- a/client/i18n/nb.json
+++ b/client/i18n/nb.json
@@ -271,7 +271,10 @@
     "exportTypeCurrentYear": "Inneværende år ({{year}})",
     "subscription": "Abonnement",
     "nameLabel": "Navn",
-    "descriptionLabel": "Beskrivelse"
+    "descriptionLabel": "Beskrivelse",
+    "officeLocationLabel": "Kontorsted",
+    "departmentLabel": "Avdeling",
+    "mobilePhoneLabel": "Mobiltelefon"
   },
   "navigation": {
     "timesheet": "Timeliste",
