--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -83,7 +83,9 @@
     "customerFormValidationText": "You must select a customer.",
     "nameFieldDescription": "The name of the project. This will be visible in your Timesheet, and in the project overview.",
     "descriptionFieldDescription": "Describe the project in more detail.",
-    "idPreviewBlankText": "You will use a combination of customer key and project key to tag your events in Outlook. You can automatically create a category in Outlook by checking _Automatically create category in Outlook_."
+    "idPreviewBlankText": "You will use a combination of customer key and project key to tag your events in Outlook. You can automatically create a category in Outlook by checking _Automatically create category in Outlook_.",
+    "informationHeaderText": "Information",
+    "timeEntriesHeaderText": "Time entries"
   },
   "customers": {
     "inactiveText": "This customer has been marked as inactive.",
