--- a/client/i18n/nb.json
+++ b/client/i18n/nb.json
@@ -82,7 +82,9 @@
     "customerFormValidationText": "Du må velge en kunde.",
     "nameFieldDescription": "Navnet på prosjektet. \nDette vil være synlig i timelisten din og i prosjektoversikten.",
     "descriptionFieldDescription": "Beskriv prosjektet i mer detalj.",
-    "idPreviewBlankText": "Du vil bruke en kombinasjon av kundenøkkel og prosjektnøkkel for å tagge kalenderoppføringene dine i Outlook. \nDu kan automatisk opprette en kategori i Outlook ved å huke av for _Opprett automatisk kategori i Outlook_."
+    "idPreviewBlankText": "Du vil bruke en kombinasjon av kundenøkkel og prosjektnøkkel for å tagge kalenderoppføringene dine i Outlook. \nDu kan automatisk opprette en kategori i Outlook ved å huke av for _Opprett automatisk kategori i Outlook_.",
+    "informationHeaderText": "Informasjon",
+    "timeEntriesHeaderText": "Tidsoppføringer"
   },
   "customers": {
     "inactiveText": "Denne kunden er markert som inaktiv.",
