Fixed form validation for Projects in ProjectForm

--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -69,8 +69,8 @@
     "myProjectsSearchPlaceholder": "Search my projects...",
     "exportTimeEntriesLabel": "Export to Excel",
     "keyFieldDescription": "A unique identifier for the project. Used together with the customer key to form the key used to tag events in Outlook. Keep it short, maximum {{keyMaxLength}} characters.",
-    "nameFormValidationText": "Name should be at least {{nameMinLength}} characters long.",
-    "keyFormValidationText": "Project key should be between {{keyMinLength}} and {{keyMaxLength}} characters long, and all uppercase.",
+    "nameFormValidationText": "Name should be at least {{PROJECT_NAME_MIN_LENGTH}} characters long.",
+    "keyFormValidationText": "Project key should be between {{PROJECT_KEY_MIN_LENGTH}} and {{PROJECT_KEY_MAX_LENGTH}} characters long, and all uppercase.",
     "createSuccess": "The project **{{name}}** was succesfully created. \nUse **{{projectId}}** to tag your events in Outlook.",
     "editLabel": "Edit project",
     "inactiveFieldDescription": "Mark the project as inactive. Hours for the project can no longer be confirmed.",
