--- a/client/i18n/nb.json
+++ b/client/i18n/nb.json
@@ -69,8 +69,8 @@
     "myProjectsSearchPlaceholder": "Søk i mine prosjekter...",
     "exportTimeEntriesLabel": "Eksporter til Excel",
     "keyFieldDescription": "En unik identifikator for prosjektet. \nBrukes sammen med kundenøkkelen for å danne nøkkelen som brukes til å tagge hendelser i Outlook. \nHold det kort, maksimalt {{keyMaxLength}} tegn.",
-    "nameFormValidationText": "Prosjektnavnet må være minst {{nameMinLength}} tegn langt.",
-    "keyFormValidationText": "Prosjektnøkkelen må være mellom {{keyMinLength}} og {{keyMaxLength}} tegn lang, og bare store bokstaver.",
+    "nameFormValidationText": "Prosjektnavnet må være minst {{PROJECT_NAME_MIN_LENGTH}} tegn langt.",
+    "keyFormValidationText": "Prosjektnøkkelen må være mellom {{PROJECT_KEY_MIN_LENGTH}} og {{PROJECT_KEY_MAX_LENGTH}} tegn lang, og bare store bokstaver.",
     "createSuccess": "Prosjektet **{{name}}** ble opprettet. Bruk **{{projectId}}** til å tagge dine kalenderoppføringer i Outlook.",
     "editLabel": "Rediger prosjekt",
     "inactiveFieldDescription": "Marker prosjektet som inaktivt. Det kan ikke lenger bekreftes timer for prosjektet.",
