--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -74,7 +74,7 @@
     "createSuccess": "The project **{{name}}** was succesfully created. \nUse **{{projectId}}** to tag your events in Outlook.",
     "editLabel": "Edit project",
     "inactiveFieldDescription": "Mark the project as inactive. Hours for the project can no longer be confirmed.",
-    "idPreviewText": "\nYou tag your calendar entries in Outlook with **{{projectId}}**. You can automatically create a category in Outlook by checking _Automatically create category in Outlook_.",
+    "idPreviewText": "\nYou tag your calendar entries in Outlook with **{{id}}**. You can automatically create a category in Outlook by checking _Automatically create category in Outlook_.",
     "createOutlookCategoryFieldLabel": "Automatically create category in Outlook",
     "createOutlookCategoryFieldDescription": "Create category {{id}} in Outlook. \nThis makes it easier to associate your Outlook events with the right project and customer.",
     "keyFieldLabel": "Project key",
