--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -82,7 +82,7 @@
     "createNewText": "Create new",
     "customerFormValidationText": "You must select a customer.",
     "nameFieldDescription": "The name of the project. This will be visible in your Timesheet, and in the project overview. Minimum {{PROJECT_NAME_MIN_LENGTH}} characters.",
-    "descriptionFieldDescription": "Describe the project in more detail.",
+    "descriptionFieldDescription": "Describe the project in more detail. Supports markdown.",
     "idPreviewBlankText": "You will use a combination of customer key and project key to tag your events in Outlook. You can automatically create a category in Outlook by checking _Automatically create category in Outlook_.",
     "informationHeaderText": "Information",
     "timeEntriesHeaderText": "Time entries",
@@ -101,7 +101,8 @@
     "createNewText": "Create new",
     "keyFieldLabel": "Customer key",
     "iconFieldDescription": "Use an icon to make the customer more recognizable in the Timesheet and Customer pages. A random icon will be selected if you dont' pick one yourself.",
-    "nameFieldDescription": "The name of the customer. This will be visible in your timesheet and in the project overview. Minimum {{CUSTOMER_NAME_MIN_LENGTH}} characters."
+    "nameFieldDescription": "The name of the customer. This will be visible in your timesheet and in the project overview. Minimum {{CUSTOMER_NAME_MIN_LENGTH}} characters.",
+    "descriptionFieldDescription": "A short description for the customer. Supports markdown."
   },
   "admin": {
     "users": "Users",
