--- a/client/i18n/nb.json
+++ b/client/i18n/nb.json
@@ -129,7 +129,7 @@
     "noTimeEntriesText": "Det er ingen bekreftede timer for de valgte månedene i det valgte året.",
     "editRole": "Rediger rolle",
     "permissonsLabel": "Tilganger",
-    "tokenGeneratedText": "Nøkkelen din er generert og vil kun være synlig i {{duration}} sekunder. Du kan bare se det en gang. Ta godt vare på den!",
+    "tokenGeneratedText": "Sørg for å kopiere den nye API nøkkelen ditn nå. \nDen forsvinner når du navigerer bort!",
     "tokenErrorText": "Det skjedde en feil under generering av nøkkel. Prøv igjen senere.",
     "tokenDeletedText": "Nøkkelen **{{name}}** ble slettet.",
     "bulkImportUsersLabel": "Importer i bulk",
