getDurationString handling floating precision

--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -217,8 +217,8 @@
     "customer": "Customer",
     "startTimeLabel": "Start time",
     "endTimeLabel": "End time",
-    "hoursShortFormat": "{{hrs}}h",
-    "minutesShortFormat": "{{mins}}min",
+    "hoursShortFormat": "{{hours}}h",
+    "minutesShortFormat": "{{minutes}}min",
     "editLabel": "Edit",
     "iconSearchPlaceholder": "Search in icons...",
     "inactiveFieldLabel": "Inactive",
