--- a/client/i18n/nb.json
+++ b/client/i18n/nb.json
@@ -216,8 +216,8 @@
     "customer": "Kunde",
     "startTimeLabel": "Starttid",
     "endTimeLabel": "Sluttid",
-    "hoursShortFormat": "{{hrs}}t",
-    "minutesShortFormat": "{{mins}}min",
+    "hoursShortFormat": "{{hours}}t",
+    "minutesShortFormat": "{{minutes}}min",
     "editLabel": "Rediger",
     "iconSearchPlaceholder": "Søk i ikoner...",
     "inactiveFieldLabel": "Inaktivt",
