Adding hours total to summary in project details

--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -297,7 +297,8 @@
     "exportTypeLastYear": "Last year ({{year}})",
     "fromDateLabel": "From:",
     "toDateLabel": "To:",
-    "rangeLabel": "Range"
+    "rangeLabel": "Range",
+    "totalHours": "Hours total"
   },
   "navigation": {
     "timesheet": "Timesheet",
