--- a/client/i18n/nb.json
+++ b/client/i18n/nb.json
@@ -296,7 +296,8 @@
     "exportTypeLastYear": "I fjor ({{year}})",
     "fromDateLabel": "Fra:",
     "toDateLabel": "Til:",
-    "rangeLabel": "Tidsrom"
+    "rangeLabel": "Tidsrom",
+    "totalHours": "Timer totalt"
   },
   "navigation": {
     "timesheet": "Timeliste",
