Reducer action REMOVE_SELECTED_FILTER working with localStorage

--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -159,7 +159,8 @@
     "savedFilters": "Saved filters",
     "saveFilterText": "Save filter",
     "filterNamePlaceholder": "Enter filter name...",
-    "cancelSaveFilterText": "Cancel"
+    "cancelSaveFilterText": "Cancel",
+    "removeSelectedFilterText": "Remove selected filter"
   },
   "common": {
     "headerTotalDuration": " ({{duration}})",
