Generating report progress

--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -151,12 +151,13 @@
     "roleInUseMessage": "This role is assigned to {{count}} users and cannot be deleted. "
   },
   "reports": {
-    "generatingReportLabel": "Generating report. To give you the freshest results, we're generating a report from the latest data...",
+    "generatingReportLabel": "Generating report",
     "noEntriesText": "There's no time entries at this time.",
     "selectReportText": "Select a report above. Be aware that some reports can take several minutes to load.",
     "selectReportLabel": "Select report",
     "forecast": "Forecast",
-    "exportToExcel": "Export to Excel"
+    "exportToExcel": "Export to Excel",
+    "generatingReportDescription": "To give you the freshest results, we're generating a report from the latest data..."
   },
   "common": {
     "headerTotalDuration": " ({{duration}})",
