--- a/client/i18n/nb.json
+++ b/client/i18n/nb.json
@@ -150,12 +150,13 @@
     "roleInUseMessage": "Denne rollen er tildelt {{count}} brukere og kan ikke slettes."
   },
   "reports": {
-    "generatingReportLabel": "Genererer rapport. For å gi deg de ferskeste resultatene, genererer vi en rapport fra de nyeste dataene...",
+    "generatingReportLabel": "Genererer rapport",
     "noEntriesText": "Det er ingen tidsoppføringer for dette tidspunktet.",
     "selectReportText": "Velg en rapport over. \nVær oppmerksom på at noen rapporter kan ta flere minutter å laste inn.",
     "selectReportLabel": "Velg rapport",
     "forecast": "Prognose",
-    "exportToExcel": "Eksporter til Excel"
+    "exportToExcel": "Eksporter til Excel",
+    "generatingReportDescription": "For å gi deg de ferskeste resultatene, genererer vi en rapport fra de nyeste dataene ..."
   },
   "common": {
     "headerTotalDuration": " ({{duration}})",
