--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -4,7 +4,7 @@
     "loadingTimesheetDescription": "Please wait while we fetch your latest data...",
     "confirmingPeriodLabel": "Confirming period",
     "confirmingPeriodDescription": "Hang on a minute...",
-    "unconfirmingPeriodLabel": "Unconfirming period",
+    "unconfirmingPeriodLabel": "Unconfirming the period",
     "unconfirmingPeriodDescription": "Hang on a minute...",
     "overviewHeaderText": "Overview",
     "summaryHeaderText": "Summary",
@@ -38,7 +38,7 @@
     "periodForecastedText": "The period is forecasted with {{hours}}.",
     "matchEventPanelHeaderText": "Resolve event",
     "unforecastingPeriodDescription": "Hang on a minute...",
-    "unforecastingPeriodLabel": "Removing forecast",
+    "unforecastingPeriodLabel": "Removing forecast for the period",
     "forecastingPeriodLabel": "Forecasting period",
     "forecastingPeriodDescription": "Hang on a minute...",
     "errorMessageText": "There was a problem fetching your timesheet. Please try again later...",
