--- a/client/i18n/nb.json
+++ b/client/i18n/nb.json
@@ -4,7 +4,7 @@
     "loadingTimesheetDescription": "Vent et lite øyeblikk...",
     "confirmingPeriodLabel": "Bekrefter timene dine",
     "confirmingPeriodDescription": "Vent et lite øyeblikk...",
-    "unconfirmingPeriodLabel": "Vi nullstiller timene dine",
+    "unconfirmingPeriodLabel": "Vi nullstiller timene dine for perioden",
     "unconfirmingPeriodDescription": "Vent et lite øyeblikk...",
     "overviewHeaderText": "Oversikt",
     "summaryHeaderText": "Sammendrag",
@@ -38,7 +38,7 @@
     "customerInactiveError": "Kunden er ikke lenger aktiv. Løs hendelsen i Outlook.",
     "projectInactiveError": "Prosjektet er ikke lenger aktivt. Løs hendelsen i Outlook.",
     "unforecastingPeriodDescription": "Vent et lite øyeblikk...",
-    "unforecastingPeriodLabel": "Fjerner prognose",
+    "unforecastingPeriodLabel": "Fjerner prognosen for perioden",
     "forecastingPeriodLabel": "Lagrer prognose",
     "forecastingPeriodDescription": "Vent et lite øyeblikk...",
     "errorMessageText": "Det oppsto et problem med å hente ut timelisten din. \nPrøv igjen senere...",
