--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -308,7 +308,9 @@
     "rangeLabel": "Range",
     "totalHours": "Hours total",
     "userReportSummary": "You have worked **{{hours}}** hours for **{{projects}}** projects _{{preset}}_. Click **Export** to export your hours to Excel.",
-    "exportExcel": "Export to Excel"
+    "exportExcel": "Export to Excel",
+    "errorFallbackHeader": "It looks like something went wrong",
+    "tryAgainText": "Try again"
   },
   "navigation": {
     "timesheet": "Timesheet",
