--- a/client/i18n/nn.json
+++ b/client/i18n/nn.json
@@ -10,27 +10,27 @@
     "summaryHeaderText": "Samandrag",
     "allocationHeaderText": "Allokering",
     "confirmHoursText": "Stadfest timar",
-    "unconfirmHoursText": "Angrar stadfesting av timar",
+    "unconfirmHoursText": "Angre på stadfesting av timar",
     "goToCurrentWeek": "Gå til inneverande veke",
     "goToPrevWeek": "Gå til førre veke",
     "goToNextWeek": "Gå til neste veke",
-    "periodHoursSummaryText": "Du har totalt *{{hours}}** denne perioden.",
-    "hoursNotMatchedText": "Du har *{{hours}}** som ikkje er kopla mot eit prosjekt. Alle avtalar må vera matcha før du kan stadfeste timane dine.",
+    "periodHoursSummaryText": "Du har totalt **{{hours}}** denne perioden.",
+    "hoursNotMatchedText": "Du har **{{hours}}** som ikkje er kopla mot eit prosjekt. Alle avtalar må vera matcha før du kan stadfeste timane dine.",
     "allHoursMatchedText": "Alle timane dine er matcha. Er du klar til å stadfeste veka di?",
-    "periodConfirmedText": "Perioden er stadfesta med {{hours}}. Klikk **Angre stadfesting av timar** dersom du treng å justere timeføringa.",
+    "periodConfirmedText": "Perioden er stadfesta med {{hours}}. Klikk **Angre på stadfesting av timar** dersom du treng å justere timeføringa.",
     "ignoredEventsText": "Du har {{ignored_count}} manuelt ignorerte hending(ar).",
     "undoIgnoreText": "Trykk for å angra",
     "unresolvedErrorText": "Du har {{count}} uløyste feil. Du må løyse desse før du kan stadfeste timane dine.",
     "splitWeekInfoText": "Valgt veke strekkjer seg over to månader. Naviger mellom periodane ved å bruka knappane over.",
     "projectInactiveErrorText": "Prosjektet er ikkje lenger aktivt. Rediger hendinga i Outlook.",
     "customerInactiveErrorText": "Kunden er ikkje lenger aktiv. Rediger hendinga i Outlook.",
-    "noProjectMatchFoundText": "Fann ikkje noko treff. \nKlikk *Løys** for å løysa hendinga manuelt eller *Ignorer** for å ignorera ho.",
+    "noProjectMatchFoundText": "Fann ikkje noko treff. \nKlikk **Løys** for å løysa hendinga manuelt eller **Ignorer** for å ignorera ho.",
     "resolveProjectButtonLabel": "Løys",
     "ignoreEventButtonLabel": "Ignorer",
     "clearProjectMatchTooltipText": "Fjern match",
-    "matchOutlookInfoText": "*Tips:** Prøv å sørge for at <a href='{{webLink}}' target='_blank'>Outlook-avtalen</a> blir matcha automatisk. I nokre tilfelle kan det likevel vere nødvendig å matche manuelt.",
+    "matchOutlookInfoText": "**Tips:** Prøv å sørge for at <a href='{{webLink}}' target='_blank'>Outlook-avtalen</a> blir matcha automatisk. I nokre tilfelle kan det likevel vere nødvendig å matche manuelt.",
     "didYouMeanText": "Meinte du",
-    "eventNotFullyMatchedText": "Hendinga kunne ikkje matchast. Vi fann matchande kunde *{{name}}**, men ikkje noko prosjekt med den spesifiserte nøkkelen.",
+    "eventNotFullyMatchedText": "Hendinga kunne ikkje matchast. Vi fann matchande kunde **{{name}}**, men ikkje noko prosjekt med den spesifiserte nøkkelen.",
     "unforecastHoursText": "Fjern prognose",
     "forecastHoursText": "Lagre prognose",
     "periodForecastedText": "Perioden er prognostisert med {{hours}}.",
@@ -71,10 +71,10 @@
     "keyFieldDescription": "Ein unik identifikator for prosjektet. \nBlir brukt saman med kundenøkkelen for å lage nøkkelen som blir brukt til å tagge hendingar i Outlook. \nHold det kort, mellom {{PROJECT_KEY_MIN_LENGTH}} og {{PROJECT_KEY_MAX_LENGTH}} teikn.",
     "nameFormValidationText": "Prosjektnamnet må vera minst {{PROJECT_NAME_MIN_LENGTH}} teikn langt.",
     "keyFormValidationText": "Prosjektnøkkelen må vera mellom {{PROJECT_KEY_MIN_LENGTH}} og {{PROJECT_KEY_MAX_LENGTH}} teikn lang, og berre store bokstavar.",
-    "createSuccess": "Prosjektet *{{name}}** vart oppretta. Bruk *{{projectId}}** til å tagga kalenderoppføringane dine i Outlook.",
+    "createSuccess": "Prosjektet **{{name}}** vart oppretta. Bruk **{{projectId}}** til å tagga kalenderoppføringane dine i Outlook.",
     "editLabel": "Rediger prosjekt",
     "inactiveFieldDescription": "Marker prosjektet som inaktivt. Det kan ikkje lenger stadfestast timar for prosjektet.",
-    "idPreviewText": "Du taggar kalenderoppføringane dine i Outlook med *{{id}}**. Du kan automatisk oppretta ein kategori i Outlook ved å huke av for _Opprett automatisk kategori i Outlook_.",
+    "idPreviewText": "Du taggar kalenderoppføringane dine i Outlook med **{{id}}**. Du kan automatisk oppretta ein kategori i Outlook ved å huke av for _Opprett automatisk kategori i Outlook_.",
     "createOutlookCategoryFieldLabel": "Opprett kategori automatisk i Outlook",
     "createOutlookCategoryFieldDescription": "Opprett kategori {{id}} i Outlook. Dette gjer det lettare å assosiera kalenderoppføringane dine i Outlook med riktig prosjekt og kunde.",
     "keyFieldLabel": "Prosjektnøkkel",
@@ -96,7 +96,7 @@
     "keyFieldDescription": "Ein unik identifikator for kunden. Haldt det kort, mellom {{CUSTOMER_KEY_MIN_LENGTH}} og {{CUSTOMER_KEY_MAX_LENGTH}} teikn og bruk berre store bokstavar.",
     "nameFormValidationText": "Kundenamnet må vera minst {{CUSTOMER_NAME_MIN_LENGTH}} teikn langt.",
     "keyFormValidationText": "Kundenøkkelen må vera mellom {{CUSTOMER_KEY_MIN_LENGTH}} og {{CUSTOMER_KEY_MAX_LENGTH}} teikn lang, og bruk berre store bokstavar.",
-    "createSuccess": "Kunden *{{name}}** vart oppretta.",
+    "createSuccess": "Kunden **{{name}}** vart oppretta.",
     "createNewText": "Opprett ny",
     "keyFieldLabel": "Kundenøkkel",
     "iconFieldDescription": "Bruk eit ikon for å gjera kunden meir gjenkjenneleg på timelista og kundesida. \nEit tilfeldig ikon vil bli valt viss du ikkje vel eit sjølv.",
@@ -131,7 +131,7 @@
     "permissonsLabel": "Tilgangar",
     "tokenGeneratedText": "Sørg for å kopiera den nye API-nøkkelen din no. \nDen forsvinn når du navigerer bort!",
     "tokenErrorText": "Det oppsto ein feil under generering av nøkkel. Prøv igjen seinare.",
-    "tokenDeletedText": "Nøkkelen *{{name}}** vart sletta.",
+    "tokenDeletedText": "Nøkkelen **{{name}}** vart sletta.",
     "bulkImportUsersLabel": "Importer i bulk",
     "bulkImportingUsersLabel": "Importerer {{count}} brukarar. Ver vennleg og vent...",
     "subscriptionSettingsUpdateSuccess": "Abonnementsinnstillingane er oppdaterte.",
@@ -306,7 +306,7 @@
     "toDateLabel": "Til:",
     "rangeLabel": "Tidsrom",
     "totalHours": "Timar totalt",
-    "userReportSummary": "Du har jobba *{{hours}}** timar for *{{projects}} *prosjekt _{{preset}}_. \nKlikk *Eksporter** for å eksportere timane dine til Excel.",
+    "userReportSummary": "Du har jobba **{{hours}}** timar for *{{projects}} *prosjekt _{{preset}}_. \nKlikk **Eksporter** for å eksportere timane dine til Excel.",
     "exportExcel": "Eksporter til Excel",
     "errorFallbackHeader": "Det virkar som noko gjekk gale",
     "tryAgainText": "Prøv igjen, det kan teoretisk sett fungere ...",
