--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -25,7 +25,7 @@
     "projectInactiveError": "Project is no longer active. Please resolve the event in Outlook.",
     "customerInactiveError": "Customer is no longer active. Please resolve the event in Outlook.",
     "noProjectMatchFoundText": "No match found for any project.",
-    "resolveProjectButtonLabel": "Resolve",
+    "resolveProjectButtonLabel": "Resolve manually",
     "ignoreEventButtonLabel": "Ignore",
     "clearProjectMatchTooltipText": "Clear match",
     "matchOutlookInfoText": "**Please note:** You should try your best to match<a href='{{webLink}}' target='_blank'>the event in Outlook</a>, but in some cases it might be neccessary to manually match.",
